--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "scripts": {
     "build": "ncc build src/main.ts",
     "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write **/*.ts"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build && git add dist/"
-    }
+    "format": "prettier --write **/*.ts",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -29,17 +25,17 @@
   },
   "homepage": "https://github.com/fortify/gha-export-vulnerabilities#README.md",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/tool-cache": "^1.6.1",
-    "@actions/exec": "^1.0.4",
-    "@actions/io": "^1.0.2"
+    "@actions/core": "^1.9.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/io": "^1.1.2",
+    "@actions/tool-cache": "^1.7.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.32",
-    "@vercel/ncc": "0.27.0",
-    "eslint": "^7.21.0",
-    "husky": "^4.3.8",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.3"
+    "@types/node": "^16.11.56",
+    "@vercel/ncc": "0.31.1",
+    "eslint": "^7.32.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.7.1",
+    "typescript": "4.4.3"
   }
 }
